Match-id-dd588204e75b359c35afb1400e165089494db6fe

--- a/api/external/api-resource-access.yaml
+++ b/api/external/api-resource-access.yaml
@@ -72,9 +72,9 @@ paths:
       x-public-api: 'Y'
       summary: 创建资源
       description: 创建资源
-      operationId: CreateResources
+      operationId: CreateResource
       parameters:
-        - name: CreateResourcesRequestBody
+        - name: CreateResourceRequestBody
           in: body
           required: true
           schema:
